# dnsdumpster

./: README.md  client.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
dnsdumpster/: __init__.py  cli.py
dnsdumpster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
