[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnsdumpster"
version = "0.1.0"
description = "DNSDumpster API client for querying DNS records"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "requests",
    "beautifulsoup4"
]
authors = [
    {name = "milo2012"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[scripts]
dnsdumpster = "dnsdumpster.client:main"

