[metadata]
name = dnsdumpster
version = 0.1.0
description = DNSDumpster API client for querying DNS records
author = milo2012
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.6

[options]
packages = find:
install_requires =
    requests
    beautifulsoup4

[options.entry_points]
console_scripts =
    dnsdumpster = dnsdumpster.client:main

